Added the second header in the code of hello.html

--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hii, this is going to be the header of this webpage</h1>
+    <h2>This is going to be added as the second header </h2>
 </body>
 </html>
