added the passage

--- a/hello.html
+++ b/hello.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hii, this is going to be the header of this webpage</h1>
     <h2>This is going to be added as the second header </h2>
+    <p>One afternoon, as the Ocean slept, the Sun did something terrible. He slowly lifted the Moon, and threw him against the wall of the sky! Instead of breaking like glass, the Moon created millions of sparks which couldn't go out. He called the sparks “stars.”</p>
 </body>
 </html>
